# agent-bench

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  Makefile  README.md  USAGE.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.opencode/: CHANGELOG.md  README.md  environments.json  environments.schema.json
.opencode/agent/: backend-reviewer.md  container-worker.md  database-reviewer.md  frontend-reviewer.md  infra-reviewer.md  req-writer.md  security-reviewer.md
.opencode/command/: basic-design-workflow.md  bug-fix.md  decompose-issue.md  detailed-design-workflow.md  implement-issues.md  req-workflow.md  reverse-engineer.md  tech-catchup-workflow.md
.opencode/instructions/: container-use.md  design-sync.md  platform-exception.md  testing-strategy.md
.opencode/skill/: approval-gate.md  bug-fix-workflow.md  ci-workflow.md  code-quality-rules.md  container-use-guide.md  environments-json-management.md  github-graphql-api.md  implement-subtask-rules.md  issue-size-estimation.md  pr-merge-workflow.md  quality-review-flow.md  reviewer-common.md  sisyphus-implementation-guide.md  subtask-detection.md  tdd-implementation.md  workflow-phase-convention.md
.serena/: project.yml
docs/: focus-mode-setup.md  troubleshooting.md
docs/memos/: 処理のフックについて.md  表示とサウンドについて.md  表示改善について.md
docs/requirements/: REQ-CLI-002_display-and-sound-enhancement.md  REQ-CLI-003_event-hooks.md  REQ-CLI-004_visual-enhancement.md
docs/research/: TECH-BE-002_rodio.md  TECH-BE-003_confy.md  TECH-DB-001_config-management.md  TECH-FE-001_indicatif.md  TECH-FE-002_colored.md
examples/hooks/: bgm-control.sh  desktop-notify.sh  record-stats.sh  slack-notify.sh
src/: lib.rs  main.rs
src/cli/: animation.rs  commands.rs  completions.rs  display.rs  ipc.rs  layout.rs  mod.rs  sound.rs  (+2 more)
tests/: hooks_integration.rs  test_e2e.rs  test_hooks.rs  test_integration.rs  test_menubar_foundation.rs  test_menubar_icon.rs  test_menubar_integration.rs  test_menubar_menu.rs  test_sound_system.rs  visual_enhancement.rs
(+66 files in other folders)
