[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "macOS専用のポモドーロタイマーCLIツール"
authors = []
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "time", "macros", "signal", "sync", "io-util", "net"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
async-trait = "0.1"
tray-icon = "0.19"
image = "0.25"
plist = "1.6"
dirs = "5.0"
aligned = "=0.4.2"

# macOS-specific dependencies for native notification system
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSSet", "NSArray", "NSObject", "NSBundle"] }
objc2-user-notifications = "0.3"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
# リンク時最適化（LTO）有効化
lto = true
# コード生成ユニット数を1に設定（最大最適化）
codegen-units = 1
# デバッグシンボル削除
strip = true
# サイズ最適化
opt-level = "z"
# パニック時のスタックアンワインド無効化
panic = "abort"
